infrastructure/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ndp
  labels:
    app.kubernetes.io/name: ndp
    app.kubernetes.io/part-of: national-digital-prescription
    environment: production
